--- a/html/backEmpManage.html
+++ b/html/backEmpManage.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/backEmpManage.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>員工帳號管理</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#" title="">會員帳號管理</a>
+                    <a href="" title="">會員帳號管理</a>
                 </li>
                 <li>
                     <a href="#" title="">員工帳號管理</a>
@@ -30,10 +30,10 @@
                     <a href="#" title="">訂單管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">查詢領養紀錄</a>
+                    <a href="#" title="">領養紀錄查詢</a>
                 </li>
                 <li>
-                    <a href="#" title="">查詢銷售紀錄</a>
+                    <a href="#" title="">銷售紀錄查詢</a>
                 </li>
                 <li>
                     <a href="#" title="">寵物商品上下架</a>
