--- a/html/backOrderlist.html
+++ b/html/backOrderlist.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>查詢領養紀錄</title>
-    <link rel="stylesheet" href="../css/backAdoptRecord.css">
+    <title>訂單管理</title>
+    <link rel="stylesheet" href="../css/backOrderlist.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -49,45 +49,37 @@
             </div>
             <div class="adoptInfomation">
                 <select name="sort" id="adobtSort">
-                    <option value="1">領養日期從新到舊</option>
-                    <option value="2">領養日期從舊到新</option>
+                    <option value="1">訂單編號從舊到新</option>
+                    <option value="2">訂單編號從新到舊</option>
                 </select>
                 <table>
                     <tr>
-                        <th>喵小孩編號</th>
-                        <th>領養者</th>
-                        <th>領養時間</th>
-                        <th>審核狀態</th>
+                        <th>訂單編號</th>
+                        <th>會員帳號</th>
+                        <th>訂單金額</th>
+                        <th>訂單日期</th>
+                        <th>訂單狀態</th>
                     </tr>
                     <tr>
                         <td>001</td>
-                        <td>abc@gmail.com</td>
+                        <td>qqq88877</td>
+                        <td>1000</td>
                         <td>2017/12/18</td>
-                        <td>成功</td>
+                        <td>尚未出貨</td>
                     </tr>
                     <tr>
                         <td>002</td>
-                        <td>abc@gmail.com</td>
+                        <td>www7788</td>
+                        <td>500</td>
                         <td>2017/12/27</td>
-                        <td>成功</td>
+                        <td>出貨中</td>
                     </tr>
                     <tr>
                         <td>003</td>
-                        <td>abc@gmail.com</td>
+                        <td>eee8787</td>
+                        <td>1500</td>
                         <td>2018/1/2</td>
-                        <td>成功</td>
-                    </tr>
-                    <tr>
-                        <td>004</td>
-                        <td>abc@gmail.com</td>
-                        <td>2018/1/8</td>
-                        <td>待審核</td>
-                    </tr>
-                    <tr>
-                        <td>005</td>
-                        <td>abc@gmail.com</td>
-                        <td>2018/1/20</td>
-                        <td>待審核</td>
+                        <td>已完成</td>
                     </tr>
                 </table>
                 <a href="#" class="defaultBtn">1</a>
