--- a/html/backEmpManage.html
+++ b/html/backEmpManage.html
@@ -15,15 +15,7 @@
         <nav>
             <ul>
                 <li>
-<<<<<<< HEAD
-<<<<<<< HEAD
-                    <a href="" title="">會員帳號管理</a>
-=======
                     <a href="backMemManage.html" title="會員帳號管理">會員帳號管理</a>
->>>>>>> 95c4a0d6dc37f4836040c1ddd36dfd5a4fca9f59
-=======
-                    <a href="backMemManage.html" title="會員帳號管理">會員帳號管理</a>
->>>>>>> 95c4a0d6dc37f4836040c1ddd36dfd5a4fca9f59
                 </li>
                 <li>
                     <a href="backEmpManage.html" title="員工帳號管理">員工帳號管理</a>
@@ -38,29 +30,13 @@
                     <a href="#" title="訂單管理">訂單管理</a>
                 </li>
                 <li>
-<<<<<<< HEAD
-<<<<<<< HEAD
-                    <a href="#" title="">領養紀錄查詢</a>
+                    <a href="/html/backAdobtRecord.html" title="領養紀錄查詢">領養紀錄查詢</a>
                 </li>
                 <li>
                     <a href="#" title="">銷售紀錄查詢</a>
-=======
-                    <a href="/html/backAdobtRecord.html" title="領養紀錄查詢">領養紀錄查詢</a>
                 </li>
                 <li>
-                    <a href="#" title="銷售紀錄查詢">銷售紀錄查詢</a>
->>>>>>> 95c4a0d6dc37f4836040c1ddd36dfd5a4fca9f59
-                </li>
-                <li>
-=======
-                    <a href="/html/backAdobtRecord.html" title="領養紀錄查詢">領養紀錄查詢</a>
-                </li>
-                <li>
-                    <a href="#" title="銷售紀錄查詢">銷售紀錄查詢</a>
-                </li>
-                <li>
->>>>>>> 95c4a0d6dc37f4836040c1ddd36dfd5a4fca9f59
-                    <a href="#" title="寵物商品上下架">寵物商品上下架</a>
+                    <a href="#" title="">寵物商品上下架</a>
                 </li>
             </ul>
         </nav>
