--- a/html/backAdobtRecord.html
+++ b/html/backAdobtRecord.html
@@ -16,38 +16,22 @@
         <nav>
             <ul>
                 <li>
-<<<<<<< HEAD
-<<<<<<< HEAD
-                    <a href="" title="">會員帳號管理</a>
-=======
-                    <a href="backMemManage.html" title="">會員帳號管理</a>
->>>>>>> 95c4a0d6dc37f4836040c1ddd36dfd5a4fca9f59
-=======
-                    <a href="backMemManage.html" title="">會員帳號管理</a>
->>>>>>> 95c4a0d6dc37f4836040c1ddd36dfd5a4fca9f59
+                    <a href="backMemManage.html" title="會員帳號管理">會員帳號管理</a>
                 </li>
                 <li>
-                    <a href="backEmpManage.html" title="">員工帳號管理</a>
+                    <a href="backEmpManage.html" title="員工帳號管理">員工帳號管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">中途之家審核</a>
+                    <a href="#" title="中途之家審核">中途之家審核</a>
                 </li>
                 <li>
-                    <a href="#" title="">檢舉審核</a>
+                    <a href="#" title="檢舉審核">檢舉審核</a>
                 </li>
                 <li>
-                    <a href="#" title="">訂單管理</a>
+                    <a href="#" title="訂單管理">訂單管理</a>
                 </li>
                 <li>
-<<<<<<< HEAD
-<<<<<<< HEAD
-                    <a href="#" title="">領養紀錄查詢</a>
-=======
-                    <a href="/html/backAdobtRecord.html" title="">領養紀錄查詢</a>
->>>>>>> 95c4a0d6dc37f4836040c1ddd36dfd5a4fca9f59
-=======
-                    <a href="/html/backAdobtRecord.html" title="">領養紀錄查詢</a>
->>>>>>> 95c4a0d6dc37f4836040c1ddd36dfd5a4fca9f59
+                    <a href="/html/backAdobtRecord.html" title="領養紀錄查詢">領養紀錄查詢</a>
                 </li>
                 <li>
                     <a href="#" title="">銷售紀錄查詢</a>
