--- a/html/backMemManage.html
+++ b/html/backMemManage.html
@@ -15,25 +15,25 @@
         <nav>
             <ul>
                 <li>
-                    <a href="backMemManage.html" title="">會員帳號管理</a>
+                    <a href="backMemManage.html" title="會員帳號管理">會員帳號管理</a>
                 </li>
                 <li>
-                    <a href="backEmpManage.html" title="">員工帳號管理</a>
+                    <a href="backEmpManage.html" title="員工帳號管理">員工帳號管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">中途之家審核</a>
+                    <a href="#" title="中途之家審核">中途之家審核</a>
                 </li>
                 <li>
-                    <a href="#" title="">檢舉審核</a>
+                    <a href="#" title="檢舉審核">檢舉審核</a>
                 </li>
                 <li>
-                    <a href="#" title="">訂單管理</a>
+                    <a href="#" title="訂單管理">訂單管理</a>
                 </li>
                 <li>
-                    <a href="/html/backAdobtRecord.html" title="">查詢領養紀錄</a>
+                    <a href="/html/backAdobtRecord.html" title="領養紀錄查詢">領養紀錄查詢</a>
                 </li>
                 <li>
-                    <a href="#" title="">查詢銷售紀錄</a>
+                    <a href="#" title="">銷售紀錄查詢</a>
                 </li>
                 <li>
                     <a href="#" title="">寵物商品上下架</a>
