--- a/html/backHalfway.html
+++ b/html/backHalfway.html
@@ -16,28 +16,28 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#" title="">會員帳號管理</a>
+                    <a href="backMemManage.html" title="會員帳號管理">會員帳號管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">員工帳號管理</a>
+                    <a href="backEmpManage.html" title="員工帳號管理">員工帳號管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">中途之家審核</a>
+                    <a href="backHalfWay.html" title="中途之家審核">中途之家審核</a>
                 </li>
                 <li>
-                    <a href="#" title="">檢舉審核</a>
+                    <a href="backReport.html" title="檢舉審核">檢舉審核</a>
                 </li>
                 <li>
-                    <a href="#" title="">訂單管理</a>
+                    <a href="backOrderlist.html" title="訂單管理">訂單管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">領養紀錄查詢</a>
+                    <a href="backAdobtRecord.html" title="領養紀錄查詢">領養紀錄查詢</a>
                 </li>
                 <li>
-                    <a href="#" title="">銷售紀錄查詢</a>
+                    <a href="backSaleRecord.html" title="銷售紀錄查詢">銷售紀錄查詢</a>
                 </li>
                 <li>
-                    <a href="#" title="">寵物商品上下架</a>
+                    <a href="backProduct.html" title="寵物商品上下架">寵物商品上下架</a>
                 </li>
             </ul>
         </nav>
