--- a/html/backOrderlist.html
+++ b/html/backOrderlist.html
@@ -65,21 +65,39 @@
                         <td>qqq88877</td>
                         <td>1000</td>
                         <td>2017/12/18</td>
-                        <td>尚未出貨</td>
+                        <td>
+                            <select name="" id="">
+                                <option value="1">尚未出貨</option>
+                                <option value="2">出貨中</option>
+                                <option value="3">已完成</option>
+                            </select>
+                        </td>
                     </tr>
                     <tr>
                         <td>002</td>
                         <td>www7788</td>
                         <td>500</td>
                         <td>2017/12/27</td>
-                        <td>出貨中</td>
+                        <td>
+                            <select name="" id="">
+                                <option value="1">尚未出貨</option>
+                                <option value="2">出貨中</option>
+                                <option value="3">已完成</option>
+                            </select>
+                        </td>
                     </tr>
                     <tr>
                         <td>003</td>
                         <td>eee8787</td>
                         <td>1500</td>
                         <td>2018/1/2</td>
-                        <td>已完成</td>
+                        <td>
+                            <select name="" id="">
+                                <option value="1">尚未出貨</option>
+                                <option value="2">出貨中</option>
+                                <option value="3">已完成</option>
+                            </select>
+                        </td>
                     </tr>
                 </table>
                 <a href="#" class="defaultBtn">1</a>
