--- a/html/backReport.html
+++ b/html/backReport.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>中途之家審核</title>
-    <link rel="stylesheet" href="../css/backHalfway.css">
+    <title>檢舉審核</title>
+    <link rel="stylesheet" href="../css/backReport.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -55,28 +55,26 @@
                 <table>
                     <tr>
                         <th>案件編號</th>
-                        <th>申請者帳號</th>
-                        <th>申請之中途之家名稱</th>
-                        <th>申請時間</th>
-                        <th>審核狀態</th>
+                        <th>檢舉人帳號</th>
+                        <th>被檢舉人帳號</th>
+                        <th>檢舉時間</th>
                         <th>審核領養案件</th>
                     </tr>
                     <tr>
                         <td>001</td>
                         <td>qqq88877</td>
-                        <td>安安安安安</td>
-                        <td>2017/12/18</td>
-                        <td>成功</td>
+                        <td>ghjkjhuikj</td>
+                        <td>2017/12/18 12:00:00</td>
                         <td>
-                            <i class="fa fa-trash" aria-hidden="true"></i>
+                            <i class="fa fa-circle-o" aria-hidden="true" id="ensureBtn"></i>
+                            <i class="fa fa-times cancel"></i>
                         </td>
                     </tr>
                     <tr>
                         <td>002</td>
                         <td>www7788</td>
-                        <td>喔喔喔喔喔</td>
-                        <td>2017/12/27</td>
-                        <td>失敗</td>
+                        <td>ghjkjhuikj</td>
+                        <td>2017/12/27 12:00:00</td>
                         <td>
                             <i class="fa fa-circle-o" aria-hidden="true" id="ensureBtn"></i>
                             <i class="fa fa-times cancel"></i>
@@ -85,9 +83,8 @@
                     <tr>
                         <td>003</td>
                         <td>eee8787</td>
-                        <td>天ㄚㄚㄚㄚ</td>
-                        <td>2018/1/2</td>
-                        <td>未審核</td>
+                        <td>ghjkjhuikj</td>
+                        <td>2018/1/2 12:00:00</td>
                         <td>
                             <i class="fa fa-circle-o" aria-hidden="true" id="ensureBtn"></i>
                             <i class="fa fa-times cancel"></i>
