--- a/html/backSaleRecord.html
+++ b/html/backSaleRecord.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>查詢領養紀錄</title>
-    <link rel="stylesheet" href="../css/backAdoptRecord.css">
+    <link rel="stylesheet" href="../css/backSaleRecord.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -49,45 +49,45 @@
             </div>
             <div class="adoptInfomation">
                 <select name="sort" id="adobtSort">
-                    <option value="1">領養日期從新到舊</option>
-                    <option value="2">領養日期從舊到新</option>
+                    <option value="1">購買日期從新到舊</option>
+                    <option value="2">購買日期從舊到新</option>
                 </select>
                 <table>
                     <tr>
-                        <th>喵小孩編號</th>
-                        <th>領養者</th>
-                        <th>領養時間</th>
-                        <th>審核狀態</th>
+                        <th>訂單編號</th>
+                        <th>購買人帳號</th>
+                        <th>購買時間</th>
+                        <th>出貨狀態</th>
                     </tr>
                     <tr>
-                        <td>001</td>
+                        <td>005</td>
                         <td>abc@gmail.com</td>
-                        <td>2017/12/18</td>
-                        <td>成功</td>
-                    </tr>
-                    <tr>
-                        <td>002</td>
-                        <td>abc@gmail.com</td>
-                        <td>2017/12/27</td>
-                        <td>成功</td>
-                    </tr>
-                    <tr>
-                        <td>003</td>
-                        <td>abc@gmail.com</td>
-                        <td>2018/1/2</td>
-                        <td>成功</td>
+                        <td>2017/1/18</td>
+                        <td>未出貨</td>
                     </tr>
                     <tr>
                         <td>004</td>
                         <td>abc@gmail.com</td>
                         <td>2018/1/8</td>
-                        <td>待審核</td>
+                        <td>已取消</td>
                     </tr>
                     <tr>
-                        <td>005</td>
+                        <td>003</td>
                         <td>abc@gmail.com</td>
-                        <td>2018/1/20</td>
-                        <td>待審核</td>
+                        <td>2018/1/2</td>
+                        <td>出貨成功</td>
+                    </tr>
+                    <tr>
+                        <td>002</td>
+                        <td>abc@gmail.com</td>
+                        <td>2018/12/28</td>
+                        <td>出貨成功</td>
+                    </tr>
+                    <tr>
+                        <td>001</td>
+                        <td>abc@gmail.com</td>
+                        <td>2017/12/20</td>
+                        <td>出貨成功</td>
                     </tr>
                 </table>
                 <a href="#" class="defaultBtn">1</a>
