--- a/html/member.html
+++ b/html/member.html
@@ -53,6 +53,7 @@
     </header>
 
     <div class="right">
+        <div class="bigImg"></div>
         <div class="container">
             <h2>我的會員專區</h2>
             <div class="leftselect">
@@ -67,12 +68,6 @@
                         <li onclick="getData('memOrderlist.html');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 查詢訂單記錄
                         </li>
-                        <!-- <li>
-                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 修改/取消訂單
-                        </li> -->
-                        <!-- <li>
-                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 查詢我領養的喵小孩
-                        </li> -->
                     </ul>
                 </div>
                 <div class="leftbottom">
@@ -80,9 +75,18 @@
                 </div>
             </div>
 
-            <div class="content" id="content">
-
+            <div class="smalllist">
+                <ul>
+                    <li onclick="getData('memInfo.html');" class="li">
+                        修改會員資料
+                    </li>
+                    <li onclick="getData('memOrderlist.html');" class="li">
+                        查詢訂單記錄
+                    </li>
+                </ul>
             </div>
+
+            <div class="content" id="content"></div>
         </div>
     </div>
 
@@ -137,4 +141,5 @@
         });
     }
 </script>
+
 </html>
