--- a/html/signUp.html
+++ b/html/signUp.html
@@ -64,6 +64,9 @@
                     <input type="reset" class="formBtn formSubmitBtn" value="清除重填">
                 </div>
             </form>
+            <p class="signInUpPos">已經是會員了嗎,
+                <button id="signInUp">點此登入</button>
+            </p>
         </div>
     </div>
     <script src="../js/signUp.js"></script>
