--- a/html/Cat_ShoppingStore_product.html
+++ b/html/Cat_ShoppingStore_product.html
@@ -144,7 +144,7 @@
                         <div>
                             <span id="Friskies" class="addButton">
                                 加入購物車
-                                <input type="hidden" value="Friskies">
+                                <input type="hidden" value="Friskies雞肉罐頭|food1.png|560">
                             </span>
 
                             <span class="addButton">
