--- a/test.html
+++ b/test.html
@@ -10,41 +10,28 @@
         #rightbox,
         #leftbox {
             width: 600px;
-            height: 800px;
-            border: 2px dotted darkslategrey;
+            height: 400px;
+            /* border: 2px dotted darkslategrey; */
             display: inline-block;
             margin: 50px;
         }
-
-        #rightbox .item,
+        /* #rightbox .item,
         #leftbox .item {
             display: inline-block;
             margin-top: 20px;
             width: 190px;
             height: 190px;
             border: 2px solid darkred;
-        }
+        } */
     </style>
 </head>
 
 <body>
     <div id="leftbox">
-        <img src="./images/noticeGame/refrigerator.png" alt="">
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
+        <img src="./images/noticeGame/refrigerator.png" alt="" data-box="left" data-role="drag-drop-container">
     </div>
     <div id="rightbox">
-        <img src="./images/noticeGame/garbage.png" alt="">
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
-        <div class="item" data-role="drag-drop-container"></div>
+        <img src="./images/noticeGame/garbage.png" alt="" data-box="right" data-role="drag-drop-container">
     </div>
     <div class="imgbox">
         <img src="./images/noticeGame/banana.png" draggable="true">
@@ -60,7 +47,7 @@
         let image = document.querySelectorAll('[draggable="true"]');
         image.forEach(image => {
             image.addEventListener('dragstart', startDrag);
-            image.addEventListener('dragend', endDrag);
+            // image.addEventListener('dragend', endDrag);
         })
 
         let box = document.querySelectorAll('[data-role="drag-drop-container"]')
@@ -73,19 +60,44 @@
                 e.preventDefault();
             })
         })
+        let temp = '';
+        let imgC = ['banana.png', 'egg.png', 'watermelon.png'];
+        let imgE = ['cookie.png', 'milk.png'];
 
         function startDrag(e) {
             let data = '<img src="' + e.target.src + '">';
             e.dataTransfer.setData('image/jpeg', data);
+            temp = e.target;
         }
 
-        function endDrag(e) {
-            e.target.style.visibility = 'hidden';
-        }
+        // function endDrag(e) {
+        //     e.target.style.visibility = 'hidden';
+        // }
 
         function dropped(e) {
+            temp.style.visibility = 'hidden';
+            let data = e.dataTransfer.getData('image/jpeg');
+            let arr = [];
+
+            e.target.innerHTML = data;
             e.preventDefault();
-            e.target.innerHTML = e.dataTransfer.getData('image/jpeg');
+            arr = data.split('/');
+            arr = arr[arr.length - 1];
+            arr = arr.slice(0, length - 2);
+
+            if (e.target.dataset.box === 'left') {
+                if (imgC.indexOf(arr) !== -1) {
+                    alert("對");
+                }else{
+                    alert("錯");
+                }
+            } else if (e.target.dataset.box === 'right') {
+                if (imgE.indexOf(arr) !== -1) {
+                    alert("對");
+                }else{
+                    alert("錯");
+                }
+            }
         }
     }
     window.addEventListener('load', doFirst);
