--- a/html/index.html
+++ b/html/index.html
@@ -261,6 +261,9 @@
                 </div>
             </div>
             <div class="section">
+                <!-- 這裡44444第二ㄍ遊戲 -->
+            </div>
+            <div class="section">
                 <!-- 中途之家 -->
                 <div class="half">
                     <div class="half-title">
@@ -270,7 +273,8 @@
                     <div class="half-item">
                         <div class="half-qty">
                             <img src="../images/number5.png" alt="5">
-                            <img src="../images/number8.png" alt="8"> 隻喵喵待領養
+                            <img src="../images/number8.png" alt="8">
+                            <span>隻喵喵待領養</span>
                         </div>
                         </a>
                         <div class="half-pic"></div>
@@ -287,7 +291,8 @@
                     <div class="half-item">
                         <div class="half-qty">
                             <img src="../images/number3.png" alt="3">
-                            <img src="../images/number6.png" alt="6"> 隻喵喵待領養
+                            <img src="../images/number6.png" alt="6">
+                            <span>隻喵喵待領養</span>
                         </div>
                         <div class="half-pic"></div>
                         <div class="half-text">
@@ -301,7 +306,8 @@
                     <div class="half-item">
                         <div class="half-qty">
                             <img src="../images/number2.png" alt="2">
-                            <img src="../images/number8.png" alt="8"> 隻喵喵待領養
+                            <img src="../images/number8.png" alt="8">
+                            <span>隻喵喵待領養</span>
                         </div>
                         <div class="half-pic"></div>
                         <div class="half-text">
