--- a/html/forum.html
+++ b/html/forum.html
@@ -21,19 +21,19 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="catSearch.html">尋喵</a>
+					<a href="./catSearch.html">尋喵</a>
 				</li>
 				<li>
-					<a href="halfway_house_search.html">中途之家</a>
+					<a href="./halfway_house_search.html">中途之家</a>
 				</li>
 				<li>
-					<a href="Cat_ShoppingStore.html">商城</a>
-				</li>
-				<li class="active">
-					<a href="#">討論區</a>
+					<a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
 				</li>
 				<li>
-					<a href="#">會員專區</a>
+					<a href="./forum.html">討論區</a>
+				</li>
+				<li>
+					<a href="./member.html">會員專區</a>
 				</li>
 			</ul>
 		</nav>
