--- a/html/forum-p1.html
+++ b/html/forum-p1.html
@@ -28,10 +28,10 @@
 					<a href="Cat_ShoppingStore.html">商城</a>
 				</li>
 				<li class="active">
-					<a href="#">討論區</a>
+					<a href="./forum.html">討論區</a>
 				</li>
 				<li>
-					<a href="#">會員專區</a>
+					<a href="./member.html">會員專區</a>
 				</li>
 			</ul>
 		</nav>
