--- a/html/header.html
+++ b/html/header.html
@@ -8,10 +8,16 @@
     <title>header</title>
     <link rel="stylesheet" href="../css/header.css">
     <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
+    <script src="../js/jquery-2.1.1.min.js"></script>
     <script src="../js/like.js"></script>
 </head>
 
 <body>
+    <div class="hamburger" id="hamburger-6">
+        <span class="line"></span>
+        <span class="line"></span>
+        <span class="line"></span>
+    </div>
     <header>
         <div class="logo">
             <a href="index.html">
@@ -52,6 +58,13 @@
             </a>
         </div>
     </header>
+    <script>
+        $(document).ready(function () {
+            $(".hamburger").click(function () {
+                $(this).toggleClass("is-active");
+            });
+        });
+    </script>
 </body>
 
 </html>
