--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -16,7 +16,7 @@
 	<div class="signUpLightbox" id="loginBox">
 		<i class="fa fa-times cancel"></i>
 		<div class="bgImg"></div>
-		<div class="formShape">
+		<div id="formShape">
 			<div class="chioce">
 				<button id="halfMember">中途之家會員</button>
 				<button id="member" class="selected">一般會員</button>
@@ -64,6 +64,9 @@
 					<input type="reset" class="formBtn formSubmitBtn" value="清除重填">
 				</div>
 			</form>
+			<p class="signInUpPos">已經是會員了嗎?
+				<button id="signInUp">點此登入</button>
+			</p>
 		</div>
 	</div>
 	<script src="../js/signUp.js"></script>
