--- a/html/index.html
+++ b/html/index.html
@@ -135,10 +135,12 @@
                     </div>
                     <div class="game-point-top">
                         <div class="game-qty-box">
-                            <span id="game-qty"></span>
+                            <!-- <span id="game-qty"></span> -->
+                            <img src="../images/cloud1_Q1.png" alt="Quest Number" id="QuestNumber">
                         </div>
                         <div class="askBox">
-                            <span id="questions"></span>
+                            <!-- <span id="questions"></span> -->
+                            <img src="../images/cloud2_Q1.png" alt="cloud Quest" id="cloudQuest">
                         </div>
                     </div>
                     <div class="game-point-bottom" id="gamePointBottom">
@@ -155,6 +157,7 @@
                         <img class="hug" id="hug" src="../images/runningCat_8.png" alt="hug cat">
                     </div>
                 </div>
+                <div class="game-point-bgimg"></div>
             </div>
             <div class="section">
                 <!-- 尋喵 -->
