--- a/html/index.html
+++ b/html/index.html
@@ -268,14 +268,16 @@
                         <h2>注意</h2>
                         <h3>Notices</h3>
                     </div>
-                    <div id="leftbox">
-                        <img src="../images/noticeGame/refrigerator.png" alt="" data-box="left" data-role="drag-drop-container">
-                    </div>
-                    <div class="centerbox">
-                        <img src="../images/noticeGame/cat_cat.png" alt="">
-                    </div>
-                    <div id="rightbox">
-                        <img src="../images/noticeGame/garbage.png" alt="" data-box="right" data-role="drag-drop-container">
+                    <div class="boxcontainer">
+                        <div id="leftbox">
+                            <img src="../images/noticeGame/refrigerator.png" alt="" data-box="left" data-role="drag-drop-container">
+                        </div>
+                        <div class="centerbox">
+                            <img src="../images/noticeGame/cat_cat.png" alt="">
+                        </div>
+                        <div id="rightbox">
+                            <img src="../images/noticeGame/garbage.png" alt="" data-box="right" data-role="drag-drop-container">
+                        </div>
                     </div>
                     <div class="imgbox">
                         <img src="../images/noticeGame/banana.png" draggable="true">
@@ -283,6 +285,7 @@
                         <img src="../images/noticeGame/egg.png" draggable="true">
                         <img src="../images/noticeGame/milk.png" draggable="true">
                         <img src="../images/noticeGame/watermelon.png" draggable="true">
+                        <img src="../images/noticeGame/banana.png" draggable="true">
                     </div>
                     <div class="hintbox" id="hintbox">
                         <div class="hinttext" id="hinttext"></div>
