--- a/html/index.html
+++ b/html/index.html
@@ -295,6 +295,9 @@
                         <img src="../images/answer.png" alt="answer cat">
                         <button id="know">我知道了!</button>
                     </div>
+                    <div class="smallbox">
+                        手機版不提供此功能喔!抱歉~~~
+                    </div>
                 </div>
             </div>
             <div class="section">
