--- a/html/index.html
+++ b/html/index.html
@@ -303,6 +303,12 @@
             <div class="section">
                 <!-- 中途之家 -->
                 <div class="half">
+                    <div id="arrowLeft">
+                        <i class="fa fa-arrow-left fa-2x" aria-hidden="true"></i>
+                    </div>
+                    <div id="arrowRight">
+                        <i class="fa fa-arrow-right fa-2x" aria-hidden="true"></i>
+                    </div>
                     <div class="half-title">
                         <h2>中途之家</h2>
                         <h3>Animal Shelter</h3>
