--- a/html/index.html
+++ b/html/index.html
@@ -271,7 +271,11 @@
                         <h2>注意</h2>
                         <h3>Notices</h3>
                     </div>
+                    <div class="ask">
+                        <img src="../images/noticeGame/cat_speak.png" alt="">
+                     </div>
                     <div class="boxcontainer">
+                        
                         <div id="leftbox">
                             <img src="../images/noticeGame/refrigerator.png" alt="" data-box="left" data-role="drag-drop-container">
                         </div>
